--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.3.8",
-    "firebase": "^10.8.0",
+    "firebase": "^9.23.0",
     "jspdf": "^2.5.1",
     "pdfkit": "^0.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "reactfire": "^4.2.3",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
