--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pdfkit": "^0.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "reactfire": "^4.2.3",
