--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@react-pdf/renderer": "^3.3.8",
     "firebase": "^9.23.0",
     "framer-motion": "^11.1.9",
@@ -24,7 +25,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "reactfire": "^4.2.3",
-    "styled-components": "^6.1.8",
+    "styled-components": "^6.1.11",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
