--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
+    "react-swipeable-views": "^0.14.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "uuid": "^10.0.0"
