--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@react-pdf/renderer": "^3.4.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.12",
     "jspdf": "^2.5.1",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.24.0",
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^10.0.5",
+    "resend": "^3.5.0",
     "styled-components": "^6.1.11",
     "uuid": "^10.0.0"
   },
