--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.12.2",
+    "firebase-admin": "^12.3.1",
     "framer-motion": "^11.2.12",
     "jspdf": "^2.5.1",
     "pdfkit": "^0.15.0",
